--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
 
       <div class="cta__dection">
-        <button class="btn btn__primary">Back this project</button>
+        <button id="back__proj" class="btn btn__primary">Back this project</button>
         <a href="#">
           <img src="./images/icon-bookmark.svg" alt="Bookmark">
         </a>
@@ -161,61 +161,96 @@
 
 
   <!-- Selection modal start -->
-  <div class="modal">
-    <div class="modal__header">
-      <h2>Back this project</h2>
-      <a href="#" class="close__modal">
-        <i class="fas fa-times"></i>
-      </a>
-    </div>
-    <p>
-      Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-    </p>
-
-    <div class="nested__card">
-      <div class="card__header">
-        <input type="radio" id="first-option" name="selector">
-        <label for="first-option">Pledge with no reward</label>
-        <div class="check"></div>
+  <div class="overlay">
+    <div class="modal">
+      <div class="modal__header">
+        <h2>Back this project</h2>
+        <a href="#" class="close__modal">
+          <i class="fas fa-times"></i>
+        </a>
       </div>
-      <p class="nested__text">
-        Choose to support us without a reward if you simply believe in our project. As a backer,
-        you will be signed up to receive product updates via email.
+      <p>
+        Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
       </p>
+    
+      <div class="nested__card">
+        <div class="card__header">
+          <input type="radio" id="first-option" name="selector">
+          <label for="first-option">Pledge with no reward</label>
+          <div class="check"></div>
+        </div>
+        <p class="nested__text">
+          Choose to support us without a reward if you simply believe in our project. As a backer,
+          you will be signed up to receive product updates via email.
+        </p>
+      </div>
+
+      <div class="nested__card">
+        <div class="card__header">
+          <input type="radio" id="second-option" name="selector">
+          <label for="second-option">Bamboo Stand</label>
+          <a href="#">Pledge $25 or more</a>
+          <div class="check"></div>
+        </div>
+
+        <p class="nested__text">
+          Choose to support us without a reward if you simply believe in our project. As a backer,
+          you will be signed up to receive product updates via email.
+        </p>
+
+        <p class="large__text">
+          101<span>left</span>
+        </p>
+
+        <div class="contribute__section">
+          <p>Enter your pledge</p>
+          <div class="contribute__action">
+            <div class="contribute__input">
+              <span>$</span>
+              <input type="text" value="25">
+            </div>
+            <a href="#" class="btn btn__primary">Continue</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="nested__card">
+        <div class="card__header">
+          <input type="radio" id="third-option" name="selector">
+          <label for="third-option">Black Edition Stand</label>
+          <a href="#">Pledge $75 or more</a>
+          <div class="check"></div>
+        </div>
+        <p class="nested__text">
+          You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+          member list. Shipping is included.
+        </p>
+        <p class="large__text">
+          64<span>left</span>
+        </p>
+      </div>
+
+      <div class="nested__card disabled">
+        <div class="card__header">
+          <input type="radio" id="forth-option" name="selector" disabled>
+          <label for="forth-option">Mahogahy Special Edition</label>
+          <a href="#" aria-disabled="true">Pledge $200 or more</a>
+          <div class="check"></div>
+        </div>
+        <p class="nested__text">
+          You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+          to our Backer member list. Shipping is included.
+        </p>
+        <p class="large__text">
+          0<span>left</span>
+        </p>
+      </div>
+    
     </div>
-
   </div>
-  <!--
 
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left-->
-
-  <!-- Selected pledge start -->
-  <!--Enter your pledge
-  $25
-  Continue-->
   <!-- Selected pledge end -->
-
-  <!--Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left-->
-
-  <!-- Selected pledge start -->
-  <!--Enter your pledge
-  $75
-  Continue-->
-  <!-- Selected pledge end -->
-
-  <!--Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left-->
 
   <!-- Selected pledge  start -->
   <!--Enter your pledge
